fix: header alignment

--- a/tabular/style.css
+++ b/tabular/style.css
@@ -19,8 +19,12 @@ button:hover{
 	background: #11DCFF;
 }
 .header{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
 	font-weight: bold;
-	min-width: 100px;
+	min-width: 90px;
+
 }
 #normalsession, #monthrows, #normaldays, #venue{
 	display: flex;
